# mcp-swiss-knife

./: .gitignore  ARCHITECTURE.md  DETECTION.md  LICENSE  README.md  SCORING.md  USAGE.md  pyproject.toml  setup.sh  test_malicious.py  test_malicious_server.json
mcp_swiss_knife/: __init__.py  config.py  detector_cache.py  injection_detector.py  main.py  mcp_client.py  normalizer.py  pattern_detector.py  scoring.py  semantic_detector.py  structural_detector.py
