[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-swiss-knife"
version = "0.1.0"
description = "CLI tool for detecting tool poisoning in MCP servers using NLP techniques"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "requests>=2.32.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.7.0",
    "rich>=13.7.0",
]

[project.scripts]
mcp-swiss-knife = "mcp_swiss_knife.main:app"

[tool.uv]
package = true
